portfolio/styles/globals.css
:root {
  --max-width: 1100px;
  --border-radius: 12px;
  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
    'Fira Mono', 'Droid Sans Mono', 'Courier New', 'monospace';
}


* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  cursor: none !important;
  
}
.show-cursor {
  cursor: pointer !important;
  z-index:1000;
}
html,
body {
  max-width: 100vw;
  
}

a {
  color: inherit;
  text-decoration: none;
}

